--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+		
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<title>Interactive Canvas Example</title>
+			<link rel="stylesheet" href="styles.css">
+		
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -57,25 +56,28 @@
 	</head>
 	<body>
 		
-	<div class="fh5co-loader"></div>
+	<div class="intro"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
+	
+	<header class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/background-image.png);" data-stellar-background-ratio="0.25">
+		<canvas id=c></canvas>
+		<a id="interactive-image" href="background-image.png"></a>
+		
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-							<h1><span>Louie Jie Mahusay</span></h1>
-							<h3><span>Web Developer / Photographer</span></h3>
+							<div class="profile-thumb" style="background: url(images/IMG_0813.JPG);"></div>
+							<h1><span>ShiJie Chen</span></h1>
+							<h3><span>Software Engineer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<!-- <li><a href="#"><i class="icon-twitter2"></i></a></li> -->
+									<li><a href="https://github.com/ReinaC26"><i class="icon-github2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/shijie-reina-chen-45448425a/"><i class="icon-linkedin2"></i></a></li>
+									<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
 								</ul>
 							</p>
 						</div>
@@ -95,23 +97,22 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">ShiJie Chen</span></li>
+						<li><span class="first-block">Other Name:</span><span class="second-block">Reina Chen</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">917-683-6515</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">chensj0314@gmail.com</span></li>
+						<li><span class="first-block">Location:</span><span class="second-block">Brooklyn,NY</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
-					<p>
+					<p>Hi! I am an undergraduate student at Hunter College, major in Computer Science and minor in math. I am a Software Engineer with a passion for technology and innovation, 
+						currently focused on expanding my software development skills and challenging myself by creating various real-life projects.</p>
+						Aside of coding, I also enjoy photography and video editing to capture the memorable moments of my life and other people's life. I am also into solving puzzles and gaming. 
+						As you may notice, my hobbies allow me to interact with both the visual and logic aspect of the world, giving me unique perspectives during coding and creating projects.<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://github.com/ReinaC26"><i class="icon-github2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/shijie-reina-chen-45448425a/"><i class="icon-linkedin2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -123,7 +124,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>My Resume</h2>
+					<h2>Timeline</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -136,15 +137,17 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Technology Intern</h3>
+									<span class="company">Morgan Stanley - Jan. 2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Successfully completed a challenging project by researching the context, consulting with the engineering team, 
+										and codifying the architectural decisions through a set of diagrams. Assessed each option by weighing its pros 
+										and cons and presented the optimal choice as a recommendation to the team.</p>
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<!-- <li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -167,7 +170,7 @@
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 								</div>
 							</div>
-						</li>
+						</li> -->
 
 						<br>
 						<li class="timeline-heading text-center animate-box">
@@ -177,15 +180,17 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">Bachelors Degree</h3>
+									<span class="company">Hunter College - 2022 - 2026</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>- Major: Computer Science</p>
+									<p>- Minor: Math</p>
+									<p>- Dean's List</p>
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<!-- <li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -197,7 +202,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<!-- <li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -208,19 +213,20 @@
 									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
-						</li>
+						</li> -->
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
+									<h3 class="timeline-title">Web Development</h3>
+									<span class="company">CodePath - Feb. 2024 - May. 2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Build a website over the course of 10 weeks. Using HTML, CSS, and JavaScript along with Flexbox and Layouts for responsive design. 
+										Utilized Async/Await for asynchronous operations and integrated animations to enhance user experience.</p>
 								</div>
 							</div>
-						</li>
+						</li> -->
 			    	</ul>
 				</div>
 			</div>
@@ -228,7 +234,7 @@
 	</div>
 	
 
-	<div id="fh5co-features" class="animate-box">
+	<!-- <div id="fh5co-features" class="animate-box">
 		<div class="container">
 			<div class="services-padding">
 				<div class="row">
@@ -316,9 +322,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
-	<div id="fh5co-skills" class="animate-box">
+	<div id="canvas" class="animate-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -326,6 +332,33 @@
 				</div>
 			</div>
 			<div class="row row-pb-md">
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" style="color: #2a2c2a; font-size: 25px;"><span><strong>HTML</strong></span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" style="color: #4f9e4b; font-size: 25px;"><span><strong>CSS</strong></span></div>
+				</div>
+				<!-- <div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
+				</div>
+
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+				</div> -->
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" style="color: #32919e; font-size: 25px;"><span><strong>MySQL</strong></span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" style="color: #9b712b; font-size: 25px;"><span><strong>Python</strong></span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" style="color: #9ea331; font-size: 25px;"><span><strong>C++</strong></span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" style="color: #9cb7a0; font-size: 25px;"><span><strong>JavaScript</strong></span></div>
+				</div>
+			</div>
+			<!-- <div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
 				</div>
@@ -351,8 +384,8 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
 				</div>
-			</div>
-			<div class="row">
+			</div> -->
+			<!-- <div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
 						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">95%</span></h3>
@@ -421,7 +454,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
@@ -429,7 +462,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Work</h2>
+					<h2>Projects</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -437,7 +470,7 @@
 					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<span>Description</span>
 						</div>
 					</a>
 				</div>
@@ -445,7 +478,7 @@
 					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Brading</span>
+							<span>Description</span>
 						</div>
 					</a>
 				</div>
@@ -453,7 +486,7 @@
 					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<span>Description</span>
 						</div>
 					</a>
 				</div>
@@ -461,7 +494,7 @@
 					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Design</span>
+							<span>Description</span>
 						</div>
 					</a>
 				</div>
@@ -469,7 +502,7 @@
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Website</span>
+							<span>Description</span>
 						</div>
 					</a>
 				</div>
@@ -477,7 +510,7 @@
 					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<span>Description</span>
 						</div>
 					</a>
 				</div>
@@ -485,7 +518,7 @@
 					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Brading</span>
+							<span>Description</span>
 						</div>
 					</a>
 				</div>
@@ -493,7 +526,7 @@
 					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<span>Description</span>
 						</div>
 					</a>
 				</div>
@@ -501,7 +534,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-blog">
+	<!-- <div id="fh5co-blog">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -557,9 +590,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	
-	<div id="fh5co-started" class="fh5co-bg-dark">
+	<!-- <div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
@@ -570,23 +603,18 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
+		<!-- <div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
 			<div class="overlay"></div>
-		</div>
+		</div> -->
 		<div class="choose animate-box">
 			<h2>Contact</h2>
 			<form action="#">
 				<div class="row form-group">
-					<div class="col-md-6">
-						<input type="text" id="fname" class="form-control" placeholder="Your firstname">
-					</div>
-				</div>
-				<div class="row form-group">
-					<div class="col-md-6">
-						<input type="text" id="lname" class="form-control" placeholder="Your lastname">
+					<div class="col-md-8">
+						<input type="text" id="fname" class="form-control" placeholder="Your first name and last name">
 					</div>
 				</div>
 
@@ -604,7 +632,7 @@
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+						<textarea name="message" id="message" cols="20" rows="8" class="form-control" placeholder="Message"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
@@ -618,7 +646,7 @@
 	<div id="map" class="fh5co-map"></div>
 	</div>
 	
-	<div id="fh5co-footer">
+	<!-- <div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -626,7 +654,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
@@ -644,9 +672,11 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map -->
+	<!-- Intro -->
+	<script src="js/IntroBackground.min.js"></script>
+	<!-- Google Map
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
+	<script src="js/google_map.js"></script> -->
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
