--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		
-			<meta charset="UTF-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>Interactive Canvas Example</title>
-			<link rel="stylesheet" href="styles.css">
-		
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+		<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+		<meta name="author" content="freehtml5.co" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -646,15 +647,15 @@
 	<div id="map" class="fh5co-map"></div>
 	</div>
 	
-	<!-- <div id="fh5co-footer">
+	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> | Customized by ShiJie</p>
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
