--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
 		</div>
 	</div>
 
+	<style>
+        hr {
+            width: 80%; /* Adjust the width to your preference */
+            margin: 0 auto; /* Center the line */
+            border: 0.2px solid rgb(200, 200, 200); /* Line style */
+        }
+    </style>
+	<hr>
 	<div id="fh5co-resume" class="fh5co-bg-color">
 		<div class="container">
 			<div class="row animate-box">
@@ -227,7 +235,7 @@
 										Utilized Async/Await for asynchronous operations and integrated animations to enhance user experience.</p>
 								</div>
 							</div>
-						</li> -->
+						</li> 
 			    	</ul>
 				</div>
 			</div>
@@ -325,6 +333,10 @@
 		</div>
 	</div> -->
 
+	<hr>
+	<br>
+	<br>
+	<br>
 	<div id="canvas" class="animate-box">
 		<div class="container">
 			<div class="row">
@@ -459,11 +471,13 @@
 		</div>
 	</div>
 
+	<hr>
 	<div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Projects</h2>
+					<button href="https://example.com" class="button" style="color: Black">View Full List</button> 
 				</div>
 			</div>
 			<div class="row">
@@ -606,6 +620,7 @@
 		</div>
 	</div> -->
 
+	<hr>
 	<div id="fh5co-consult">
 		<!-- <div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
 			<div class="overlay"></div>
@@ -615,19 +630,19 @@
 			<form action="#">
 				<div class="row form-group">
 					<div class="col-md-8">
-						<input type="text" id="fname" class="form-control" placeholder="Your first name and last name">
+						<input type="text" id="fname" class="form-control" placeholder="First name and last name">
 					</div>
 				</div>
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<input type="text" id="email" class="form-control" placeholder="Your email address">
+						<input type="text" id="email" class="form-control" placeholder="Email address">
 					</div>
 				</div>
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
+						<input type="text" id="subject" class="form-control" placeholder="Subject of this message">
 					</div>
 				</div>
 
@@ -651,7 +666,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> | Customized by ShiJie</p>
+					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a style="color: #86c0ff" href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> | Customized by ShiJie</p>
 				</div>
 			</div>
 		</div>
