--- a/index.html
+++ b/index.html
@@ -109,11 +109,14 @@
 					<h2>Hello There!</h2>
 					<p>Hi! I am an undergraduate student at Hunter College, major in Computer Science and minor in math. I am a Software Engineer with a passion for technology and innovation, 
 						currently focused on expanding my software development skills and challenging myself by creating various real-life projects.</p>
-						Aside of coding, I also enjoy photography and video editing to capture the memorable moments of my life and other people's life. I am also into solving puzzles and gaming. 
+						Aside of coding, I also enjoy photography and video editing to capture the memorable moments of my life and other people's life. I am also into solving puzzles and playing video games. 
 						As you may notice, my hobbies allow me to interact with both the visual and logic aspect of the world, giving me unique perspectives during coding and creating projects.<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://github.com/ReinaC26"><i class="icon-github2"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/shijie-reina-chen-45448425a/"><i class="icon-linkedin2"></i></a></li>
+							<li>
+								<a href="https://drive.google.com/file/d/1EgEVBEsiCAH-44vl0Ff6mZE1kYT8RTCw/view" target="_blank" class="button" style="color: white">Resume</a>
+							</li>
 						</ul>
 					</p>
 				</div>
@@ -666,7 +669,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a style="color: #86c0ff" href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> | Customized by ShiJie</p>
+					<p style="color:rgba(136, 136, 136, 0.6)">&copy; ShiJie Chen | Designed by <a style="color: #86c0ff" href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
 				</div>
 			</div>
 		</div>
